@@ -1,3 +1,8 @@
+Fri Dec 17 09:14:13 1999  Gary Wong  <gary@cs.arizona.edu>
+
+	* gnubg.c (usage): "--help" option now mentions "help" command
+	within gnubg.
+
 Thu Dec 16 18:11:41 1999  Gary Wong  <gary@cs.arizona.edu>
 
 	* xboard.c (BoardPointer): Fixed bug which prevented bearing off
